<resources>
    <string name="app_name">Albert_Jin_Final</string>
    <string name="title">Burrito Builder</string>
    <string name="name">Your Name</string>
    <string name="burrito">Burrito</string>
    <string name="taco">Taco</string>
    <string name="salsa">Salsa</string>
    <string name="sour_cream">Sour cream</string>
    <string name="cheese">Cheese</string>
    <string name="gluten_free">Gluten-free</string>
    <string name="find_burrito">Find Burrito</string>
    <string name="guacamole">Guacamole</string>
    <string name="meat">MEAT</string>
    <string name="veggie">VEGGIE</string>
    <string name="build">Build</string>

    <string-array name="Location">
        <item>The Hill</item>
        <item>29th Street</item>
        <item>Pearl Street</item>
    </string-array>
</resources>
